     the source: namespace should be used instead.  Likewise sessions
     are no longer present in the chroot: namespace, and are only
     found in the session: namespace.  This means the fully-qualified
     name must be used to refer to sessions except when performing
     actions which use session: as the default namespace.

* Major changes in 1.4.11:

  None.

* Major changes in 1.4.10:

  None.

* Major changes in 1.4.9:

  None.

* Major changes in 1.4.8:

  1) Chroot names are now prefixed by a namespace.  Three namespaces
     are used in this release, "chroot:", "source:" and "session:" for
     chroots, source chroots and sessions, respectively.  These may
     all be selected with the --all-chroots, --all-source-chroots and
     --all-sessions options.  Individual chroots may be referred to
     with or without a prefix, depending upon the context.  For most
     actions, "chroot:" is the default prefix, while the
     --run-session, --recover-session and --end-session actions use
     "session:" as the default prefix.

  2) Source chroots previously used a -source suffix.  A chroot named
     "squeeze" providing a source chroot would also create a source
     chroot named "squeeze-source".  The source chroot is now named
     "source:squeeze", but a chroot with a -source suffix is still
     created for compatibility (actually now named
     "chroot:squeeze-source").  The -source suffix names will be
     dropped in the 1.5.x development releases and 1.6.x stable
     releases.

  3) Session chroots previously were in the same flat namespace as
     chroots.  Now that sessions are in a separate namespace, it is
     possible to create a session with the same name as the original
     chroot.  For example a chroot named "build" is actually
     "chroot:build" and so the session will be named "session:build".
     For compatibility session names are also still placed in the
     "chroot:" namespace so that they still work without namespaces